$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.10-11 (Jan 27, 2008, working...)

	* bgdispersal: New, more powerful test statistic (in terms of Type
	1 error rate) for the McNemar test (Pierre Legendre).
	
	* permuted.index2: fixed a bug in permutations with strata.

	* Documentation: added documentation for permuted.index2,
	permControl, permCheck and helper functions. FAQ and intro know
	now about orditkplot, anova.cca(..., by="margin") and
	permuted.index2. FAQ gained new sections on using different
	plotting symbols and handling congested plots in ordination
	graphics.

Version 1.10-10 (closed Jan 27, 2008)

	* DESCRIPTION: suggests tcltk.

	* orditkplot: new function for ordination plots based on Tcl/Tk:
	you can edit graph by moving labels using a mouse and save the
	edited graph as an eps file, or expoert via R plot function to
	eps, pdf, png or jpeg, or to dump to R session for further
	processing. 

	* CCorA: removed partial analysis (which needs more work and may
	reappear later).
	
Version 1.10-9 (closed Jan 16, 2008)

	* anova.cca: new option by = "margin" to perform separate tests
	for each marginal effect in a model with all other terms. This is
	similar to Type III tests, but will only work with marginal terms,
	and will exclude main effects when corresponding interactions are
	in the model.  P-value is now assessed in the true blue way as
	(hits+1)/(permutations+1) in all anova.cca methods. Permutations
	should be able to handle now rank deficit cases with pivoting in
	the QR decomposition (permutest.cca).
	
	* permuted.index2: New version of permuted.index() that now allows
	restricted permutations. Can produce permutations for time-series
	or line transects and for spatial grids. These can also be nested
	within 'strata'. permuted.series() and permuted.grid() are the 
	relevant workhorse functions. Permutation options are set by new 
	function permControl(). Plan to migrate vegan functions to 